Add silly guy and 404 page

--- a/Application/index.html
+++ b/Application/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div style="position: fixed; bottom: 10px; right: 20px; z-index: 1000;">
+      <p style="margin: 0; font-size: 0.9em; color: #888; text-align: right;">Code written by TheRealMopcornPuncher</p>
+      <p style="margin: 0; font-size: 0.9em; color: #888; text-align: right;">Art by Kylerizzflovskireal</p>
+    </div>
+    <div style="position: fixed; bottom: 10px; left: 20px; z-index: 1000;">
+      <p style="margin: 0; font-size: 1em; color: #888; text-align: left;">V0.1 | Pre-Alpha</p>
+    </div>
   </body>
 </html>
